--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:background="@drawable/ui_element"
-            android:src="@drawable/ic_x_negative"
+            android:src="@drawable/ic_arrow_sw"
             android:scaleX="-1"
             app:layout_constraintBottom_toTopOf="@id/button_move"
             app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:background="@drawable/ui_element"
-            android:src="@drawable/ic_x_positive"
+            android:src="@drawable/ic_arrow_ne"
             android:scaleX="-1"
             app:layout_constraintBottom_toTopOf="@id/button_arrow_se"
             app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:background="@drawable/ui_element"
-            android:src="@drawable/ic_x_negative"
+            android:src="@drawable/ic_arrow_sw"
             app:layout_constraintBottom_toTopOf="@id/button_arrow_nw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -175,7 +175,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:background="@drawable/ui_element"
-            android:src="@drawable/ic_x_positive"
+            android:src="@drawable/ic_arrow_ne"
             app:layout_constraintBottom_toTopOf="@id/button_arrow_sw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
