--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_shopFragment_to_messageFragment"
             app:destination="@id/messageFragment" />
+        <action
+            android:id="@+id/action_shopFragment_to_stockFragment"
+            app:destination="@id/stockFragment" />
     </fragment>
 
     <fragment
@@ -20,8 +23,12 @@
         android:name="uk.co.jakelee.pixelbookshop.ui.message.MessageFragment"
         android:label="MessageFragment"
         tools:layout="@layout/fragment_message">
-        <action
-            android:id="@+id/action_messageFragment_to_shopFragment"
-            app:destination="@id/shopFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/stockFragment"
+        android:name="uk.co.jakelee.pixelbookshop.ui.stock.StockFragment"
+        android:label="StockFragment"
+        tools:layout="@layout/fragment_stock">
     </fragment>
 </navigation>
