--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -1,34 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:background="@drawable/ui_background">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ui_element"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:fontFamily="@font/fenwickwoodtype"
-        app:fontFamily="@font/fenwickwoodtype"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:text="@string/title_stock" />
+        android:background="@drawable/ui_element">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fenwickwoodtype"
+            app:fontFamily="@font/fenwickwoodtype"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="30sp"
+            android:text="@string/title_stock"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:id="@+id/sorting"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ui_element_greyscale"
+            android:fontFamily="@font/fenwickwoodtype"
+            app:fontFamily="@font/fenwickwoodtype"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="20sp"
+            tools:text="Sort by Genre"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/filtering"/>
+        <TextView
+            android:id="@+id/filtering"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ui_element_greyscale"
+            android:fontFamily="@font/fenwickwoodtype"
+            app:fontFamily="@font/fenwickwoodtype"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="20sp"
+            tools:text="Filtered"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintStart_toEndOf="@id/sorting"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/booksRecycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:paddingStart="3dp"
         android:paddingEnd="3dp"
         android:paddingBottom="3dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+</LinearLayout>
