--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,10 @@
         <action
             android:id="@+id/action_shopFragment_to_stockFragment"
             app:destination="@id/stockFragment" />
+        <argument
+            android:name="booksToAssign"
+            app:argType="integer"
+            android:defaultValue="@null" />
     </fragment>
 
     <fragment
@@ -30,5 +34,8 @@
         android:name="uk.co.jakelee.pixelbookshop.ui.stock.StockFragment"
         android:label="StockFragment"
         tools:layout="@layout/fragment_stock">
+        <action
+            android:id="@+id/action_stockFragment_to_shopFragment"
+            app:destination="@id/shopFragment" />
     </fragment>
 </navigation>
