--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
             app:destination="@id/stockFragment" />
         <argument
             android:name="booksToAssign"
-            app:argType="integer"
+            app:argType="integer[]"
             android:defaultValue="@null" />
     </fragment>
 
