--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -28,6 +28,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
+            android:id="@+id/selectAll"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:background="@drawable/ui_element_greyscale"
+            android:fontFamily="@font/fenwickwoodtype"
+            app:fontFamily="@font/fenwickwoodtype"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:padding="8dp"
+            android:text="@string/stock_select_all"
+            app:layout_constraintTop_toTopOf="@id/title"
+            app:layout_constraintBottom_toBottomOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
             android:id="@+id/assign"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -38,7 +53,7 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             android:padding="8dp"
-            android:text="Assign books"
+            android:text="@string/stock_assign_default"
             android:alpha="0.5"
             app:layout_constraintTop_toTopOf="@id/title"
             app:layout_constraintBottom_toBottomOf="@id/title"
