--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/black"
         android:gravity="center"
         android:textSize="30sp"
-        android:text="@string/title_messages" />
+        android:text="@string/messages_title" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messagesRecycler"
         android:layout_width="match_parent"
