--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -23,7 +23,7 @@
             android:textColor="@color/black"
             android:gravity="center"
             android:textSize="30sp"
-            android:text="@string/title_stock"
+            android:text="@string/stock_title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
