--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,7 @@
         <argument
             android:name="booksToAssign"
             app:argType="integer[]"
+            app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
 
