--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -64,6 +64,16 @@
         app:fontFamily="@font/fenwickwoodtype"
         android:textColor="@color/black"
         tools:text="Day 1: 4pm" />
+    <ImageView
+        android:id="@+id/time_control"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/text_time_progress"
+        app:layout_constraintStart_toStartOf="@id/text_time_progress"
+        android:paddingLeft="8dp"
+        android:src="@drawable/ic_play"/>
+
 
     <ProgressBar
         android:id="@+id/text_stock_progress"
